--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,10 @@
     <string name="enter_number">ENTER BAR CODE NUMBER</string>
     <string name="add_card_text">You can find your barcode number on the back of your member card.</string>
     <string name="cancel">CANCEL</string>
+    <string name="welcome">WELCOME TO</string>
+    <string name="center">CNETER  #01</string>
+    <string name="address">ADDRESS</string>
+    <string name="iframe_msg">It would be navigate to iFrame.</string>
 
     <string-array name="drawerText">
         <item>@string/membership_info</item>
