--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="app_id">875653462579095</string>
     <string name="action_settings">Settings</string>
     <string name="date">Date</string>
     <string name="instructor">Instructor</string>
@@ -65,6 +66,7 @@
     <string name="iframe_msg">It would be navigate to iFrame.</string>
     <string name="donate_text">The Y.™ For a better us.™</string>
     <string name="clas_activity"><![CDATA[CLASSES & ACTIVITIES]]></string>
+    <string name="clas_activit">Classes &amp; Activities</string>
     <string name="sports">SPORTS LEAGUES</string>
     <string name="event_caln">EVENTS CALENDAR</string>
     <string name="spiring_field">SPRINGFIELD YMCA</string>
@@ -118,4 +120,5 @@
     <string name="intensity_level">Intensity Level</string>
     <string name="city_1">DOWNTOWN</string>
     <string name="city_2">KERASOTES</string>
+    <string name="instructor_info">Instructor Info</string>
 </resources>
