--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,11 +59,13 @@
     <string name="card_name">CARD NAME</string>
     <string name="enter_number">ENTER BAR CODE NUMBER</string>
     <string name="add_card_text">You can find your barcode number on the back of your member card.</string>
-    <string name="cancel">CANCEL</string>
+    <string name="cancel">@android:string/cancel</string>
     <string name="welcome">WELCOME TO</string>
     <string name="center">CNETER  #01</string>
     <string name="address">ADDRESS</string>
     <string name="iframe_msg">It would be navigate to iFrame.</string>
+    <string name="server_error">Server Error</string>
+    <string name="please_error"> Please try again later.</string>
     <string name="donate_text">The Y.™ For a better us.™</string>
     <string name="clas_activity"><![CDATA[CLASSES & ACTIVITIES]]></string>
     <string name="clas_activit">Classes &amp; Activities</string>
