--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,4 +124,8 @@
     <string name="city_2">KERASOTES</string>
     <string name="instructor_info">Instructor Info</string>
     <string name="trainee">Trainer</string>
+    <string name="delete">Delete</string>
+    <string name="notification">Notification</string>
+    <string name="setting_text">Employee Clock-In/Out</string>
+    <string name="select_location">Select Location</string>
 </resources>
