--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="classes">Classes</string>
     <string name="schedule">SCHEDULES</string>
     <string name="my_card">MY CARDS</string>
-    <string name="location">LOCATION</string>
+    <string name="location">LOCATIONS</string>
     <string name="program">Programs</string>
     <string name="blog">Blog</string>
     <string name="no_record">No Record Found</string>
@@ -123,9 +123,15 @@
     <string name="city_1">DOWNTOWN</string>
     <string name="city_2">KERASOTES</string>
     <string name="instructor_info">Instructor Info</string>
-    <string name="trainee">Trainer</string>
+    <string name="trainee">TRAINER</string>
     <string name="delete">Delete</string>
     <string name="notification">Notification</string>
-    <string name="setting_text">Employee Clock-In/Out</string>
+    <string name="setting_text">Employee Login</string>
     <string name="select_location">Select Location</string>
+    <string name="reportProb">Report Problem</string>
+    <string name="default_loc">Default Location</string>
+    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
+    <string name="gcm_deleted">From GCM: error (%1$s).</string>
+    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
+    <string name="gcm_error">From GCM: error (%1$s).</string>
 </resources>
